<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300px"
    android:minHeight="100px"
    android:visibility="visible"
    tools:context=".ui.dashboard.DashboardFragment"
    tools:visibility="visible">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="87dp"
            android:layout_height="83dp"
            android:contentDescription="@string/Button4"
            android:src="@drawable/icons8_online_payment_24"
            android:background="@drawable/rounded_corner"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pago de servicios"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:translationX="90dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.002">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="87dp"
            android:layout_height="83dp"
            android:contentDescription="@string/Button3"
            android:src="@drawable/icons8_mobile_payment_24"
            android:background="@drawable/rounded_corner"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tiempo Aire"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:translationX="90dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="87dp"
            android:layout_height="83dp"
            android:contentDescription="@string/Button"
            android:src="@drawable/icons8_data_transfer_24"
            android:background="@drawable/rounded_corner"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:translationX="90dp"
            tools:text="Transferencia" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="412dp"
        android:layout_height="83dp"
        app:cardBackgroundColor="@color/material_dynamic_neutral95"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView5"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="87dp"
            android:layout_height="83dp"
            android:background="@drawable/rounded_corner"
            android:contentDescription="@string/Button6"
            android:src="@drawable/icons8_no_credit_cards_24" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Retiro sin tarjeta"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:translationX="90dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="408dp"
        android:layout_height="79dp"
        android:paddingTop="2dp"
        app:cardBackgroundColor="@color/material_dynamic_neutral95"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4">

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="77dp"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner"
            android:contentDescription="@string/Button7"
            android:src="@drawable/icons8_investment_64" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Inversión"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:translationX="90dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="409dp"
        android:layout_height="79dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="76dp"
                android:layout_height="73dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/rounded_corner"
                android:src="@drawable/ic_baseline_add_circle_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button7"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button7"
                android:layout_width="318dp"
                android:layout_height="59dp"
                android:layout_marginEnd="4dp"
                android:text="Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>